style.css
@font-face {
    font-family: "Suisse Mono";
    src: url("fonts/SuisseIntlMono-Regular.otf");
}
  
@font-face {
    font-family: "Buenos Aires";
    src: url("fonts/BuenosAires-Bold.otf");
}

:root {
    --day-color: #EAE5E4;
    --night-color: #18332F;
    --nighter-color: #152725;
}

html, 
body {
    height: 100%;
    scroll-behavior: smooth;
}

body {
    transition: background-color 1s ease-in-out;
}

.circle {
    background-color: #A6BDB0;
    position: absolute;
    height: 198px;
    width: 396px;
}

.night .circle {
    background-color: #552736;
}

.bold {
    font-family: "Buenos Aires";
    font-size: 20px;
}

.underline {
    text-decoration: underline;
}

.section {
    display: flex;
    position: relative;
    width: 100%;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

h1 {
    color: var(--nighter-color);
    font-family: "Buenos Aires";
    font-size: 57px;
    font-weight: bold;
    letter-spacing: 3.14px;
    line-height: 71px;
    max-width: 773px;
    z-index: 1;
}

.night h1 {
    color: var(--day-color);
}

#anchors {
    position: fixed;
    right: 85px;
    z-index: 1;
    text-align: right;
    line-height: 25px;
    top: 25px;
}

#anchors .links {
    font-size: 22px;
}

#switcher {
    position: fixed;
    cursor: pointer;
    left: 4rem;
    top: 5rem;
    z-index: 1;
    border-radius: 50%;
}

.day #switcher {
    background-color: var(--day-color);
}

.night #switcher {
    background-color: var(--night-color);
}

#main {
    display: flex;
    justify-content: center;
    font-family: "Suisse Mono";
    flex-direction: column;
    align-items: center;
}

#overlay {
    background: url('images/overlay.jpg') no-repeat center center;
    width: 100%;
    min-height: 100vh;
    background-size: cover;
}

#infos {
    height: 1008px;
}

#infos .content {
    max-width: 300px;
    align-self: center;
}

#infos .content img {
    margin-bottom: 102px;
}

#infos .circle, #order .circle {
    border-top-left-radius: 792px;
    border-top-right-radius: 792px;
    bottom: 0px;
    right: 85px;
}

#infos .link {
    width: 170px;
}

#concept h1 {
    margin-top: 47px;
}

#concept .circle {
    border-bottom-left-radius: 792px;
    border-bottom-right-radius: 792px;
    left: 249px;
    top: 0;
}

#menu {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    margin-bottom: 82px;
}

#menu .links {
    display: flex;
    margin-bottom: 84px;
    margin-top: 89px;
}

#menu .link {
    cursor: pointer;
    height: 50px;
}

.table {
    display: flex;
    flex-direction: column;
    transition: opacity 1s linear;
    opacity: 1;
    visibility: visible;
    height: auto;
}

.table.hidden {
    opacity: 0;
    transition: opacity 1s linear;
    visibility: hidden;
    height: 0;
}

.table.hidden .row {
    display: none;
}

.table .row {
    display: flex;
    border-top: 1px solid var(--night-color);
}

.table .row:last-of-type {
    border-bottom: 1px solid var(--night-color);
}

.night .table .row {
    border-top: 1px solid var(--day-color);
}

.night .row:last-of-type {
    border-bottom: 1px solid var(--day-color);
}

.table .column {
    display: flex;
    min-height: 200px;
    padding: 18px 13px;
    flex-direction: column;
    position: relative;
}

.table .column:not(.category) {
    width: 266px;
}

.table .column.category {
    padding-left: 0;
    width: 136px;
}

.table .column:not(:first-child):after {
    background-color: var(--night-color);
    content: '';
    display: block;
    height: 86%;
    left: 50%;
    position: absolute;
    width: 1px;
    left: 0;
}

.night .table .column:not(:first-child):after {
    background-color: var(--day-color);
}

.table .element {
    margin-bottom: 35px;
}

.table .prices {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

.table .text {
    max-width: 75%;
}

.table .title {
    font-family: "Buenos Aires";
    font-size: 23px;
    font-weight: bold;
    line-height: 25px;
    display: flex;
    justify-content: space-between;
}

.table .description {
    margin-top: 3px;
    font-size: 17px;
    line-height: 22px;
}

.block {
    margin-bottom: 17px;
}

h4 {
    font-size: 20px;
    font-weight: bold;
    margin-bottom: 8px;
    font-family: "Buenos Aires";
}

p {
    font-size: 17px;
    line-height: 25px;
}

a {
    text-decoration: none;
}

.link {
    margin-top: 10px;
}

.link.border {
    border-bottom: 4px solid;
}

.link:not(.no-border):not(.border) a:after {
    content: "";
    display: block;
    width: 0%;
    padding-top: 19px;
    border-bottom: 4px solid;
    transition: .5s;
}

.link:not(.no-border):not(.border) a:hover:after {
    width: 100%;
}

.day .link a:after,
.day .link.border a {
    border-bottom-color: var(--night-color);
}

.night .link a:after,
.night .link.border a {
    border-bottom-color: var(--day-color);
}

.links {
    margin-top: 36px;
    font-size: 28px;
    font-weight: bold;
    font-family: "Buenos Aires";
}

.day {
    background-color: var(--day-color);
}

.night {
    background-color: var(--nighter-color);
}

.day,
.day a {
    color: var(--night-color);
}

.night,
.night a {
    color: var(--day-color);
}

#order {
    background-color: #F3EFEF;
    padding-bottom: 90px;
}

#order h1:first-of-type {
    margin-top: 117px;
    margin-bottom: 32px;
    max-width: 800px;
}

#footer {
    background-color: var(--nighter-color);
    height: 187px;
    font-family: "Buenos Aires";
    justify-content: space-evenly;
    flex-direction: row;
}

#footer .follow {
    display: flex;
    align-items: center;
}

#footer .follow p {
    margin-right: 5px;
}

#footer, #footer p {
    font-size: 29px;
    font-weight: bold;
    line-height: 25px;
}

#footer, #footer a {
    color: var(--day-color);
}

#footer i {
    padding: 0 10px;
}

#footer a:hover {
    color: #CCC4C3;
}

/* mobile styling */
@media (max-width: 1040px) {
    .table .row {
        flex-direction: column;
    }

    .table .column {
        min-height: auto;
    }

    .table .column:not(:first-child):after {
        height: 0;
        width: 0;
    }
}


@media (max-width: 800px) {
    #anchors {
        position: absolute;
    }

    #switcher {
        display: none;
    }

    .circle {
        display: none;
    }

    h1 {
        font-size: 40px;
        padding: 0 2rem;
        line-height: 48px;
    }

    #order h1 {
        padding: 0;
    }

    #footer {
        flex-direction: column;
    }

    #footer a, #footer p {
        font-size: 25px;
    }
}

